GLTF cache for firefox, fixes slow loading time on firefox. Also new root structure

--- a/src/UI-ap.css
+++ b/src/UI-ap.css
@@ -19,6 +19,9 @@ h1 {
     text-align: center;
     user-select: none;
 }
+img {
+    display: none;
+}
 
 .HardwareA {
     top: 50%;
